--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 [dependencies]
 byteorder = "1.5.0"
+clap = { version = "4.5.26", features = ["derive"] }
 crc = "3.2.1"
 serde = "1.0.217"
 serde_derive = "1.0.217"
+shlex = "1.3.0"
 tempfile = "3.15.0"
 
 [lib]
